--- a/env_vars/project.properties
+++ b/env_vars/project.properties
@@ -1,11 +1,11 @@
 APP_NAME=kubejencdp
 IMAGE_NAME=kubejencdp-app
-PROJECT_NAME=amitthk
-DOCKER_REGISTRY_URL=registry.hub.docker.com
+PROJECT_NAME=my-project-kubernetes
+DOCKER_REGISTRY_URL=hub.docker.com
 RELEASE_TAG=1.0.0
-DOCKER_PROJECT_NAMESPACE=amitthk
+DOCKER_PROJECT_NAMESPACE=pramodksahoo
 JENKINS_DOCKER_CREDENTIALS_ID=JENKINS_DOCKER_CREDENTIALS_ID
 JENKINS_GCLOUD_CRED_ID=JENKINS_GCLOUD_CRED_ID
-JENKINS_GCLOUD_CRED_LOCATION= /var/lib/jenkins/lateral-ceiling-220011-5c9f0bd7782f.json
-GCLOUD_PROJECT_ID=lateral-ceiling-220011
-GCLOUD_K8S_CLUSTER_NAME=pyfln-k8s-cluster-dev
+JENKINS_GCLOUD_CRED_LOCATION= /var/lib/jenkins/my-project-kubernetes-245411-2cc64a2d7af2.json
+GCLOUD_PROJECT_ID=my-project-kubernetes-245411
+GCLOUD_K8S_CLUSTER_NAME=my-jenkins-cluster
