--- a/env_vars/project.properties
+++ b/env_vars/project.properties
@@ -1,7 +1,7 @@
 APP_NAME=kubejencdp
 IMAGE_NAME=kubejencdp-app
 PROJECT_NAME=my-project-kubernetes
-DOCKER_REGISTRY_URL=hub.docker.com
+DOCKER_REGISTRY_URL=registry.hub.docker.com
 RELEASE_TAG=1.0.0
 DOCKER_PROJECT_NAMESPACE=pramodksahoo
 JENKINS_DOCKER_CREDENTIALS_ID=JENKINS_DOCKER_CREDENTIALS_ID
